REGRESSION: Using the reload button while offline pushes identical pages onto the back/forward list https://bugs.webkit.org/show_bug.cgi?id=184570 <rdar://problem/34807323>

Patch by Sihui Liu <sihui_liu@apple.com> on 2018-04-18
Reviewed by Chris Dumez.

Source/WebCore:

Set FrameLoadType properly when error occurs in reload.

tests: Tools/TestWebKitAPI/Tests/WebKitCocoa/LoadAlternateHTMLString.mm

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::load):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/LoadAlternateHTMLString.mm:
(TEST):

Canonical link: https://commits.webkit.org/200252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230767 268f45cc-cd09-0410-ab3c-d52691b4dbfc